src/test/deca/context/valid/obj/declfield/test_field_public_protected.deca
// Description:
//    Declarations d'attributs publics et proteges
//
// Resultats:
//
// 
// Historique:
//    cree le 01/01/2024

class A{
    int a;
    protected boolean b;
    float c;
}
