src/test/deca/context/invalid/obj/declfield/test_same_field.deca
// Description:
//    declaration de deux attributs de meme nom
//
// Resultats:
//   field déjà définie
// 
// Historique:
//    cree le 01/01/2024

class A{
    int a;
    int a;
}